# rust-otus

./: Cargo.toml  README.md
.github/workflows/: tests.yaml
fizz-buzz/: Cargo.toml
smart-house/: Cargo.toml  README.md
smart-house/examples/: main.rs
smart-house/src/: connection.rs  devices.rs  errors.rs  formatter.rs  house.rs  lib.rs  main.rs  receiver.rs  report.rs  result.rs  room.rs
smart-house/src/devices/: device.rs  retriable_switcher.rs  smartsocket.rs  thermometer.rs  types.rs
smart-socket/: Cargo.toml
smart-socket/examples/: smart_socket_tcp.rs
smart-socket/src/: lib.rs  protocol.rs  receiver.rs
thermometer/: Cargo.toml
thermometer/examples/: thermometer_udp.rs
thermometer/src/: sender.rs
web/: Cargo.toml  README.md
web/src/: devices.rs  errors.rs  house.rs  lib.rs  main.rs  rooms.rs  socket.rs
