[package]
name = "smart-house"
version = "0.1.0"
edition = "2018"

[lib]
name = "smart"
path = "src/lib.rs"

[features]
default = []
no-tokio = []

[dependencies]
async-trait = "0.1.52"
regex = "1.5.4"
smart_socket = { path = "../smart-socket" }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"]  }
